--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button id="loginBtn" class="btn-primary font-bold px-6 py-3 rounded-lg transition"><i class="fas fa-arrow-right"></i></button>
             </div>
             <p id="loginError" class="text-red-500 mt-4 h-4"></p>
-            <a href="https://t.me/YOUR_BOT_USERNAME" target="_blank" class="mt-4 text-blue-400 hover:underline">Get Your Code from Telegram Bot</a>
+            <a href="https://t.me/ElderChk_Bot" target="_blank" class="mt-4 text-blue-400 hover:underline">Get Your Code from Telegram Bot</a>
         </div>
 
         <!-- User Dashboard View -->
